add info for env config

--- a/.env.private
+++ b/.env.private
@@ -5,8 +5,12 @@
 # However, for obvious security concerns we are not allowed to share our 42 API secret key.
 # If you want to test this project, use your own 42 API key or contact me.
 
+FORTYTWO_APP_CLIENT_SECRET=INSERT_PRIVATE_KEY
+
+# Don't forget to edit the public key in the .env file too ;)
+
+
 POSTGRES_PASSWORD=Wy7amYm@!6n{ysrV.-](7"-.?'+)~.CAvL7Y]w}edM'~5USxAXj!>Q\U7_P''/PC
-FORTYTWO_APP_CLIENT_SECRET=/!\INSERT YOUR OWN 42 API KEY HERE/!\
 JWT_ACCESSTOKEN_SECRET=g'2d?[atDt(e]2}Bt$)Ch*hQ;<UFC=MN_}cyB%nN?&u6Pa'pGe.X?%.Gcg,tBEe@
 JWT_ACCESSTOKEN_EXPIRATION_TIME=604800
 
